--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "protractor": "^5.3.0"
   },
   "bugs": {
